AMP/angular-starter/features: intro-module

--- a/angular-starter/src/app/app.component.html
+++ b/angular-starter/src/app/app.component.html
@@ -27,12 +27,7 @@
 
 <main>
   <router-outlet></router-outlet>
-  <div class="myContent">
-    <app-header></app-header>
-    <tools></tools>
-    <hr><courses></courses><hr>
-    <app-footer></app-footer>
-  </div>
+  <intro></intro>
 </main>
 
 <pre class="app-state">this.appState.state = {{ appState.state | json }}</pre>
