AMP/angular-starter/features: subModule

--- a/angular-starter/src/app/angular-intro/courses/courses.component.html
+++ b/angular-starter/src/app/angular-intro/courses/courses.component.html
@@ -1,3 +1,6 @@
 <div>
-  <p>Courses componernt {{ text }}</p>
+  <p>Courses component {{ text }}</p>
+  <div class="box">
+    <cours></cours>
+  </div>
 </div>
