AMP/angular-starter/features: props

--- a/angular-starter/src/app/angular-intro/angular-intro.component.html
+++ b/angular-starter/src/app/angular-intro/angular-intro.component.html
@@ -1,6 +1,9 @@
 <div>
   <app-header></app-header>
+  <hr>
   <tools></tools>
-  <hr><courses></courses><hr>
+  <hr>
+  <courses></courses>
+  <hr>
   <app-footer></app-footer>
 </div>
