--- a/angular-starter/src/app/angular-intro/cours/cours.component.html
+++ b/angular-starter/src/app/angular-intro/cours/cours.component.html
@@ -1,3 +1,12 @@
 <div>
-  <p>CourS componernt {{ text }}</p>
+  <p>CourS component {{ text }}</p>
+  <hr>
+  <p>ID: {{coursItem.id}}</p>
+  <p>Name: {{coursItem.name}}</p>
+  <p>Duration: {{coursItem.duration.hours}}h {{coursItem.duration.minuts}}m {{coursItem.duration.seconds}}s</p>
+  <p class="tags">
+    <span *ngFor="let tag of coursItem.tags">
+      {{tag}}
+    </span>
+  </p>
 </div>
