AMP/angular-starter/features: ngModel

--- a/angular-starter/src/app/angular-intro/course/course.component.html
+++ b/angular-starter/src/app/angular-intro/course/course.component.html
@@ -1,9 +1,10 @@
 <div>
   <p>ID: {{courseItem.id}} | Name: {{courseItem.name}}</p>
   <p>Duration: {{courseItem.duration.hours}}h {{courseItem.duration.minuts}}m {{courseItem.duration.seconds}}s</p>
-  <label><input type="checkbox"
-    [checked]="courseItem.isAccept"
-    (click)="localAccept(courseItem.id)">Accepted</label>
+  <!--i want: checkbox ===  courseItem.isAccept + click => recalc counter -->
+  <label><input
+    type = "checkbox"
+    [(ngModel)]="courseItem.isAccept"/>Accepted</label>
   <p class="tags">
     <span *ngFor="let tag of courseItem.tags">
       {{tag}}
