--- a/angular-starter/src/app/angular-intro/header/header.component.html
+++ b/angular-starter/src/app/angular-intro/header/header.component.html
@@ -1,3 +1,13 @@
 <div>
-  <p>I'm header</p>
+  <div class="logo-box">
+    <div class="logo-content">
+      <p>logo-img</p>
+      <p>not found</p>
+    </div>
+  </div>
+  <div>
+    <p>courses</p>
+    <p>which element is it?</p>
+  </div>
+  <login></login>
 </div>
