--- a/angular-starter/src/app/angular-intro/courses/courses.component.html
+++ b/angular-starter/src/app/angular-intro/courses/courses.component.html
@@ -2,7 +2,7 @@
 <div class="box">
   <p>Accepted count: {{count}}</p>
   <hr>
-  <course></course>
+  <course>null</course>
   <course *ngFor = "let item of couresArr"
   [courseItem] = "item"
   (handler) = "this.toggle($event.value)"
