--- a/angular-starter/src/app/angular-intro/header/header.component.html
+++ b/angular-starter/src/app/angular-intro/header/header.component.html
@@ -1,8 +1,10 @@
 <div>
   <div class="logo-box">
     <div class="logo-content">
-      <p>logo-img</p>
-      <p>not found</p>
+      <img src="https://seeklogo.com/images/A/angular-icon-logo-9946B9795D-seeklogo.com.png" alt="" srcset="">
+    </div>
+    <div>
+      <h1>Angular</h1>
     </div>
   </div>
   <div>
