AMP/task3_arr/features: array of answer

--- a/angular-starter/src/app/angular-intro/modalWindow/modalWindow.component.html
+++ b/angular-starter/src/app/angular-intro/modalWindow/modalWindow.component.html
@@ -1,7 +1,10 @@
 <div *ngIf="visible" class="view">
   <div class="message">
     <p>{{message}}</p>
-    <button (click) = "handler('Yes')">Yes</button>
-    <button (click) = "handler('No')">No</button>
+    <!-- <button (click) = "handler('Yes')">Yes</button>
+    <button (click) = "handler('No')">No</button> -->
+    <button *ngFor = "let item of answersArr"
+    (click) = "item.click"
+    >{{item.text}}</button>
   </div>
 </div>
