--- a/angular-starter/src/app/angular-intro/modalWindow/modalWindow.component.css
+++ b/angular-starter/src/app/angular-intro/modalWindow/modalWindow.component.css
@@ -1,16 +1,25 @@
-.view {
+:host>div {
   position: fixed;
   width: 100%;
   height: 100%;
   top: 0;
   left: 0;
-  background-color: dimgrey;
+  background-color: rgba(0, 0, 0, 0.7);
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.view .message {
+:host>div .message {
+  padding: 15px;
+  border-radius: 15px;
   position: relative;
-  background-color: darksalmon;
+  background-color: rgba(255, 255, 255, 0.7);
+}
+
+:host>div .message>.buttons{
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
