--- a/angular-starter/src/app/angular-intro/course/course.component.html
+++ b/angular-starter/src/app/angular-intro/course/course.component.html
@@ -2,11 +2,11 @@
   <p>{{courseItem.name}} | ID: {{courseItem.id}} | Duration: {{courseItem.duration.hours}}h {{courseItem.duration.minuts}}m {{courseItem.duration.seconds}}s</p>
   <p>Date: {{courseItem.date}}</p>
   <div class="controls">
-    <!--i want: checkbox ===  courseItem.isAccept + click => recalc counter -->
+    <!--i want: checkbox ===  courseItem.isAccept and click => recalc counter -->
     <label><input type = "checkbox" [(ngModel)] = "courseItem.isAccept"
     />Accepted</label>
     <button>edit</button>
-    <button (click) = "del(courseItem.id)">delete</button>
+    <button (click) = "del()">delete</button>
   </div>
   <p class="tags">
     <span *ngFor="let tag of courseItem.tags"
