--- a/angular-starter/src/app/angular-intro/modalWindow/modalWindow.component.html
+++ b/angular-starter/src/app/angular-intro/modalWindow/modalWindow.component.html
@@ -4,7 +4,7 @@
   <div class="message">
     <h2>{{message}}</h2>
     <div class="buttons">
-      <button *ngFor = "let item of answersArr"
+      <button *ngFor = "let item of answerArr"
       (click) = "item.click()"
       >{{item.text}}</button>
     </div>
