AMP/task3_authorization/features: 1) reuse, show/hide

--- a/angular-starter/src/app/angular-intro/angular-intro.component.html
+++ b/angular-starter/src/app/angular-intro/angular-intro.component.html
@@ -1,7 +1,8 @@
 <div>
   <app-header></app-header>
+  <modalWindow></modalWindow>
   <tools></tools>
   <courses></courses>
+  <login-page></login-page>
   <app-footer></app-footer>
-  <modalWindow></modalWindow>
 </div>
