AMP/task3/fix: rename loginform->userinfo

--- a/angular-starter/src/app/angular-intro/header/header.component.html
+++ b/angular-starter/src/app/angular-intro/header/header.component.html
@@ -10,5 +10,5 @@
   <div *ngIf="owner!='login-page'">
     <p>breadcrumbs</p>
   </div>
-  <login *ngIf="isAuth"></login>
+  <userinfo *ngIf="isAuth"></userinfo>
 </div>
