AMP/task3_authorization/features: done

--- a/angular-starter/src/app/angular-intro/toolbar/search/search.component.html
+++ b/angular-starter/src/app/angular-intro/toolbar/search/search.component.html
@@ -1,4 +1,4 @@
 <div>
-  <input type='text' [(ngModel)]='searchText' placeholder="Search...">
+  <input type="text" [(ngModel)]="searchText" placeholder="Search...">
   <button (click)="find()">Find</button>
 </div>
