--- a/angular-starter/src/app/angular-intro/userinfo/userinfo.component.html
+++ b/angular-starter/src/app/angular-intro/userinfo/userinfo.component.html
@@ -1,5 +1,5 @@
 <div>
   <p>I'm userinfo</p>
-  <p>User Login</p>
-  <button>logoff</button>
+  <p>Login: {{login}}</p>
+  <button (click) = "click()">logoff</button>
 </div>
