--- a/angular-starter/src/app/angular-intro/login-page/login-page.component.html
+++ b/angular-starter/src/app/angular-intro/login-page/login-page.component.html
@@ -1,6 +1,10 @@
 <div>
   <app-header [owner]="'login-page'"></app-header>
   <h1>LOGIN PAGE</h1>
-  <span>Yeah, i'm login page</span>
+  <div>
+    <input type="text" [(ngModel)]="login" placeholder="Login">
+    <input type="password" [(ngModel)]="password" placeholder="Password">
+    <button type="submit" (click)="click()">Enter</button>
+  </div>
   <app-footer></app-footer>
 </div>
