AMP/task4/features: loader-block

--- a/angular-starter/src/app/angular-intro/angular-intro.component.html
+++ b/angular-starter/src/app/angular-intro/angular-intro.component.html
@@ -1,6 +1,7 @@
 <div>
   <app-header></app-header>
   <modalWindow></modalWindow>
+  <loaderBlock></loaderBlock>
   <tools></tools>
   <courses></courses>
   <login-page></login-page>
