--- a/angular-starter/src/app/angular-intro/loaderBlock/loaderBlock.component.html
+++ b/angular-starter/src/app/angular-intro/loaderBlock/loaderBlock.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="visible">
   <div class="message">
-    <h2>{{data.message}}</h2>
+    <div class="loader">Loading...</div>
   </div>
 </div>
