--- a/angular-starter/src/app/angular-intro/course/course.component.css
+++ b/angular-starter/src/app/angular-intro/course/course.component.css
@@ -2,6 +2,7 @@ p {
   color: #369;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 250%;
+  margin: 5px 0px;
 }
 .tags {
   padding: 5px;
@@ -16,4 +17,12 @@ p {
 .controls {
   display: flex;
   justify-content: space-around;
+}
+
+/* angular...why you do host 0x0 ?  */
+:host>div {
+  border-radius: 15px;
+  border: 7px solid black;
+  padding: 15px;
+  margin: 5px 0px;
 }
