--- a/angular-starter/src/app/angular-intro/courses/courses.component.css
+++ b/angular-starter/src/app/angular-intro/courses/courses.component.css
@@ -1,5 +1,5 @@
 p {
-  color: #369;
+  /* color: #369; */
   font-family: Arial, Helvetica, sans-serif;
   font-size: 250%;
 }
@@ -12,3 +12,17 @@ p {
   border-bottom: 3px solid rgb(41, 51, 189);
   margin-bottom: 7px;
 } */
+
+.message {
+  background-color: dimgray;
+  /* copy course.component.css */
+  border-radius: 15px;
+  border: 7px solid black;
+  padding: 15px;
+  margin: 5px 0px;
+  text-align: center;
+}
+.message>p {
+  font-size: 250%;
+  margin: 5px 0px;
+}
