--- a/angular-starter/src/app/angular-intro/angular-intro.component.html
+++ b/angular-starter/src/app/angular-intro/angular-intro.component.html
@@ -1,4 +1,5 @@
 <div>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.9/css/all.css" integrity="sha384-5SOiIsAziJl6AWe0HWRKTXlfcSHKmYV4RBF18PPJ173Kzn7jzMyFuTtk8JA7QQG1" crossorigin="anonymous">
   <app-header></app-header>
   <modalWindow></modalWindow>
   <loaderBlock></loaderBlock>
