--- a/angular-starter/src/app/angular-intro/course/course.component.html
+++ b/angular-starter/src/app/angular-intro/course/course.component.html
@@ -13,7 +13,7 @@
     ]
   }"
 >
-  <p>{{courseItem.name}} | ID: {{courseItem.id}} | Duration: {{courseItem.duration.hours}}h {{courseItem.duration.minuts}}m {{courseItem.duration.seconds}}s</p>
+  <p>{{courseItem.name}} | ID: {{courseItem.id}} | Duration: {{courseItem.duration.hours}}h {{courseItem.duration.minuts}}m {{courseItem.duration.seconds}}s <i *ngIf="courseItem.topRated" class="fas fa-star"></i></p>
   <p>Date: {{courseItem.date}}</p>
   <div class="controls">
     <!--i want: checkbox ===  courseItem.isAccept and click => recalc counter -->
