--- a/angular-starter/src/app/angular-intro/course/course.component.css
+++ b/angular-starter/src/app/angular-intro/course/course.component.css
@@ -4,10 +4,6 @@ p {
   font-size: 250%;
   margin: 5px 0px;
 }
-i {
-  color: gold;
-  font-size: 100%;
-}
 .tags {
   padding: 5px;
   display: flex;
@@ -29,4 +25,13 @@ i {
   border: 7px solid black;
   padding: 15px;
   margin: 5px 0px;
+}
+
+/* star */
+i {
+  color: rgb(204, 201, 14);
+  font-size: 100%;
+}
+.topRate {
+  background-color: rgb(255, 253, 120);
 }
