AMP/task5/features: pipes 1)uppercase for name

--- a/angular-starter/src/app/angular-intro/course/course.component.html
+++ b/angular-starter/src/app/angular-intro/course/course.component.html
@@ -14,8 +14,8 @@
   }"
   [ngClass]="{'topRate': courseItem.topRated}"
 >
-  <p>{{courseItem.name}} | ID: {{courseItem.id}} | Duration: {{courseItem.duration.hours}}h {{courseItem.duration.minuts}}m {{courseItem.duration.seconds}}s <i *ngIf="courseItem.topRated" class="fas fa-star"></i></p>
-  <p>Date: {{courseItem.date}}</p>
+  <p>{{courseItem.name | uppercase}} | ID: {{courseItem.id}} | Duration: {{courseItem.duration.hours}}h {{courseItem.duration.minuts}}m {{courseItem.duration.seconds}}s <i *ngIf="courseItem.topRated" class="fas fa-star"></i></p>
+  <p>Date: {{courseItem.date | date:"MM/dd/yy"}}</p>
   <div class="controls">
     <!--i want: checkbox ===  courseItem.isAccept and click => recalc counter -->
     <label><input type = "checkbox" [(ngModel)] = "courseItem.isAccept"
