--- a/angular-starter/src/app/angular-intro/course/course.component.html
+++ b/angular-starter/src/app/angular-intro/course/course.component.html
@@ -15,7 +15,7 @@
   [ngClass]="{'topRate': courseItem.topRated}"
 >
   <p>{{courseItem.name | uppercase}} | ID: {{courseItem.id}} | Duration: {{courseItem.duration | myDurations }} <i *ngIf="courseItem.topRated" class="fas fa-star"></i></p>
-  <p>Date: {{courseItem.date | date:"dd/MM/yyyy"}}</p>
+  <p>Date: {{courseItem.createdDate | date:"dd/MM/yyyy"}}</p>
   <div class="controls">
     <!--i want: checkbox ===  courseItem.isAccept and click => recalc counter -->
     <label><input type = "checkbox" [(ngModel)] = "courseItem.isAccept"
