--- a/angular-starter/src/app/angular-intro/courses/courses.component.html
+++ b/angular-starter/src/app/angular-intro/courses/courses.component.html
@@ -4,7 +4,7 @@
   <hr>
   <course>null</course>
   <div *ngIf = "coursesArr.length !== 0">
-    <course *ngFor = "let item of coursesArr | myOrderBy"
+    <course *ngFor = "let item of coursesArr | myOrderBy:'createdDate':'desc'"
     [courseItem] = "item"
     (handler) = "handler($event)"
     ></course>
