AMP/task5/fix: not-renamed date->createdDate

--- a/angular-starter/src/app/angular-intro/course/course.component.html
+++ b/angular-starter/src/app/angular-intro/course/course.component.html
@@ -6,7 +6,7 @@
 <div
   appStylelight
   [payload] = "{
-    data: courseItem.date,
+    data: courseItem.createdDate,
     caseArr: [
       {data: {start: currentDate - (14 * 86400000), end: currentDate}, setStyle: [{rule: 'border-color', value: 'green'}]},
       {data: {start: currentDate, end: infinityDate}, setStyle: [{rule: 'border-color', value: 'blue'}]}
