--- a/angular-starter/src/app/angular-intro/course/course.component.html
+++ b/angular-starter/src/app/angular-intro/course/course.component.html
@@ -6,7 +6,7 @@
 <div
   appStylelight
   [payload] = "{
-    data: courseItem.createdDate,
+    data: courseItem.date,
     caseArr: [
       {data: {start: currentDate - (14 * 86400000), end: currentDate}, setStyle: [{rule: 'border-color', value: 'green'}]},
       {data: {start: currentDate, end: infinityDate}, setStyle: [{rule: 'border-color', value: 'blue'}]}
@@ -15,7 +15,7 @@
   [ngClass]="{'topRate': courseItem.topRated}"
 >
   <p>{{courseItem.name | uppercase}} | ID: {{courseItem.id}} | Duration: {{courseItem.duration | myDurations }} <i *ngIf="courseItem.topRated" class="fas fa-star"></i></p>
-  <p>Date: {{courseItem.createdDate | date:"dd/MM/yyyy"}}</p>
+  <p>Date: {{courseItem.date | date:"dd/MM/yyyy"}}</p>
   <div class="controls">
     <!--i want: checkbox ===  courseItem.isAccept and click => recalc counter -->
     <label><input type = "checkbox" [(ngModel)] = "courseItem.isAccept"
