--- a/angular-starter/src/app/angular-intro/angular-intro.component.html
+++ b/angular-starter/src/app/angular-intro/angular-intro.component.html
@@ -6,5 +6,6 @@
   <tools></tools>
   <courses></courses>
   <login-page></login-page>
+  <course-page></course-page>
   <app-footer></app-footer>
 </div>
