--- a/angular-starter/src/app/angular-intro/modalWindow/modalWindow.component.html
+++ b/angular-starter/src/app/angular-intro/modalWindow/modalWindow.component.html
@@ -1,8 +1,8 @@
 <div *ngIf="visible">
   <div class="message">
-    <h2>{{data.message}}</h2>
+    <h2>{{message}}</h2>
     <div class="buttons">
-      <button *ngFor = "let item of data.answerArr"
+      <button *ngFor = "let item of answerArr"
       (click) = "click(item)"
       >{{item}}</button>
     </div>
