AMP/task7/features: server + 1)a: store token

--- a/angular-starter/src/app/angular-intro/header/header.component.html
+++ b/angular-starter/src/app/angular-intro/header/header.component.html
@@ -8,6 +8,7 @@
     </div>
   </div>
   <div *ngIf="owner!='login-page'">
+    <!-- <breadcrumbs-component></breadcrumbs-component> -->
     <p>breadcrumbs</p>
   </div>
   <userinfo *ngIf="isAuth"></userinfo>
