--- a/angular-starter/src/app/angular-intro/userinfo/userinfo.component.html
+++ b/angular-starter/src/app/angular-intro/userinfo/userinfo.component.html
@@ -1,5 +1,6 @@
 <div>
   <p>I'm userinfo</p>
-  <p>Login: {{login}}</p>
+  <p>Login: {{user.login}}</p>
+  <p>Name: {{user.name.first}} {{user.name.last}}</p>
   <button (click) = "click()">logoff</button>
 </div>
