AMP/task7/features: addMore

--- a/angular-starter/src/app/angular-intro/courses/courses.component.html
+++ b/angular-starter/src/app/angular-intro/courses/courses.component.html
@@ -14,4 +14,7 @@
       <p>Sorry, no Course in array</p>
     </div>
   </div>
+  <div>
+    <button (click)="loadMore()">Add more (3)</button>
+  </div>
 </div>
