--- a/angular-starter/src/app/angular-intro/course-page/course-page.component.css
+++ b/angular-starter/src/app/angular-intro/course-page/course-page.component.css
@@ -11,3 +11,12 @@
   flex-direction: column;
   align-items: center;
 }
+
+.testCustomControls {
+  background-color: rgb(158, 241, 241);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 15px;
+  padding: 15px;
+}
