AMP/task8/try: dateComponent like generaly controller

--- a/angular-starter/src/app/angular-intro/course-page/course-page.component.html
+++ b/angular-starter/src/app/angular-intro/course-page/course-page.component.html
@@ -23,7 +23,10 @@
 
     <label>Date
       <date-component
+        [(ngModel)]="testDate"
+        [ngModelOptions]="{standalone: true}"
       ></date-component>
+      <p>{{testDate | date}}</p>
     </label>
 
     <label>Duration<input type="text">
