AMP/fix/refactor: search by Enter

--- a/angular-starter/src/app/toolbar/search/search.component.html
+++ b/angular-starter/src/app/toolbar/search/search.component.html
@@ -1,4 +1,8 @@
 <div>
-  <input type="text" [(ngModel)]="searchText" placeholder="Search...">
+  <input type="text"
+    [(ngModel)]="searchText"
+    placeholder="Search..."
+    (keyup.enter)="find()"
+  >
   <button (click)="find()">Find</button>
 </div>
