AMP/routing/features: simple route

--- a/angular-starter/src/app/app.component.html
+++ b/angular-starter/src/app/app.component.html
@@ -4,8 +4,9 @@
   <modalWindow></modalWindow>
   <loaderBlock></loaderBlock>
   <tools></tools>
-  <courses></courses>
-  <login-page></login-page>
-  <course-page></course-page>
+  <!-- <courses></courses> -->
+  <!-- <login-page></login-page> -->
+  <!-- <course-page></course-page> -->
+  <router-outlet></router-outlet>
   <app-footer></app-footer>
 </main>
