AMP/routing/try: do not show breadcrumbs on ligin-page

--- a/angular-starter/src/app/header/header.component.html
+++ b/angular-starter/src/app/header/header.component.html
@@ -7,7 +7,7 @@
       <h1>Angular</h1>
     </div>
   </div>
-  <div *ngIf="owner!='login-page'">
+  <div *ngIf="showBreadCrumbs">
     <!-- <breadcrumbs-component></breadcrumbs-component> -->
     <p>breadcrumbs</p>
   </div>
