AMP/routing/features: 1, 2

--- a/angular-starter/src/app/course/course.component.html
+++ b/angular-starter/src/app/course/course.component.html
@@ -23,7 +23,7 @@
     <button>edit</button>
     <button (click) = "del()">delete</button>
   </div>
-  <p class="tags">
+  <p class="tags" *ngIf="courseItem.tags.length > 0">
     <span
     *ngFor="let tag of courseItem.tags as tags; index as i"
     appStylelight
