--- a/angular-starter/src/app/app.component.html
+++ b/angular-starter/src/app/app.component.html
@@ -1,6 +1,6 @@
 <main>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.9/css/all.css" integrity="sha384-5SOiIsAziJl6AWe0HWRKTXlfcSHKmYV4RBF18PPJ173Kzn7jzMyFuTtk8JA7QQG1" crossorigin="anonymous">
-  <app-header routerLink="/login" routerLinkActive="active"></app-header>
+  <app-header></app-header>
   <modalWindow></modalWindow>
   <loaderBlock></loaderBlock>
   <tools></tools>
