--- a/angular-starter/src/app/course-page/course-page.component.html
+++ b/angular-starter/src/app/course-page/course-page.component.html
@@ -1,5 +1,6 @@
 <h1>Course Page</h1>
 <div class="testCustomControls">
+  <!-- test content -->
     <label><input type="checkbox" [(ngModel)]="disabledFlag"> Disable button</label>
   <test-component [(ngModel)]="test" [disabled]="disabledFlag"></test-component>
   <input type="number" [(ngModel)]="test" [disabled]="disabledFlag">
@@ -7,6 +8,7 @@
   <input type="number" [(ngModel)]="test2" [disabled]="disabledFlag">
   <input type="number" [(ngModel)]="test2" [disabled]="disabledFlag">
 </div>
+
 <!-- #myForm [formGroup]="myForm" -->
 <form ngClass="content"
   >
