AMP/task9/features: breadcrumbs like separate component

--- a/angular-starter/src/app/header/header.component.html
+++ b/angular-starter/src/app/header/header.component.html
@@ -7,9 +7,9 @@
       <h1>Angular</h1>
     </div>
   </div>
-  <div *ngIf="showBreadCrumbs">
-    <!-- <breadcrumbs-component></breadcrumbs-component> -->
-    <p>breadcrumbs</p>
-  </div>
+  <breadcrumbs-component
+    *ngIf="showBreadCrumbs"
+  ></breadcrumbs-component>
+
   <userinfo *ngIf="isAuth"></userinfo>
 </div>
