--- a/angular-starter/src/app/course-page/course-page.component.html
+++ b/angular-starter/src/app/course-page/course-page.component.html
@@ -37,6 +37,10 @@
     <!-- <authors-component></authors-component> -->
   </label>
 
+  <div>
+    <p>{{course | async | json}}</p>
+  </div>
+
   <label>
     <button type="submit" (click)="save()">Save</button>
     <button type="submit" (click)="cancel()">Cancel</button>
