--- a/angular-starter/src/app/course-page/course-page.component.html
+++ b/angular-starter/src/app/course-page/course-page.component.html
@@ -1,13 +1,13 @@
 <h1>Course Page</h1>
-<div class="testCustomControls">
-  <!-- test content -->
+<!-- test content -->
+<!-- <div class="testCustomControls">
     <label><input type="checkbox" [(ngModel)]="disabledFlag"> Disable button</label>
   <test-component [(ngModel)]="test" [disabled]="disabledFlag"></test-component>
   <input type="number" [(ngModel)]="test" [disabled]="disabledFlag">
   <br>
   <input type="number" [(ngModel)]="test2" [disabled]="disabledFlag">
   <input type="number" [(ngModel)]="test2" [disabled]="disabledFlag">
-</div>
+</div> -->
 
 <!-- #myForm [formGroup]="myForm" -->
 <form ngClass="content"
@@ -23,10 +23,13 @@
 
   <label>Date
     <date-component
+      #myDate="ngModel"
+      date-validator
       [(ngModel)]="testDate"
       [ngModelOptions]="{standalone: true}"
     ></date-component>
     <p>{{testDate | date}}</p>
+    <p>valid: {{myDate.valid}}</p>
   </label>
 
   <label>Duration<input type="text">
