AMP/fix/feature: show login error

--- a/angular-starter/src/app/login-page/login-page.component.css
+++ b/angular-starter/src/app/login-page/login-page.component.css
@@ -1,6 +1,8 @@
-:host /deep/>div{
-  color: palevioletred;
+:host div {
   border: 3px solid rgb(43, 178, 219);
   margin: 15px;
   padding: 15px;
+}
+:host span{
+  color: red;
 }
