--- a/angular-starter/src/app/login-page/login-page.component.html
+++ b/angular-starter/src/app/login-page/login-page.component.html
@@ -3,4 +3,5 @@
   <input type="text" [(ngModel)]="login" placeholder="Login">
   <input type="password" [(ngModel)]="password" placeholder="Password">
   <button type="submit" (click)="click()">Enter</button>
+  <span *ngIf="error">ERROR: {{error}}</span>
 </div>
