AMP/refactor: bootstrap in progress (modal window need more refactor)

--- a/angular-starter/src/app/courses/courses.component.html
+++ b/angular-starter/src/app/courses/courses.component.html
@@ -15,6 +15,6 @@
     </div>
   </div>
   <div>
-    <button (click)="loadMore()">Add more (3)</button>
+    <button class="btn btn-info" (click)="loadMore()">Add more (3)</button>
   </div>
 </div>
