--- a/angular-starter/src/app/header/header.component.html
+++ b/angular-starter/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<div>
+<header>
   <div class="logo-box">
     <div class="logo-content">
       <img src="https://seeklogo.com/images/A/angular-icon-logo-9946B9795D-seeklogo.com.png" alt="" srcset="">
@@ -12,4 +12,4 @@
   ></breadcrumbs-component>
 
   <userinfo *ngIf="isAuth"></userinfo>
-</div>
+</header>
