--- a/angular-starter/src/app/login-page/login-page.component.html
+++ b/angular-starter/src/app/login-page/login-page.component.html
@@ -1,7 +1,25 @@
 <h1>LOGIN PAGE</h1>
-<div>
-  <input type="text" [(ngModel)]="login" placeholder="Login">
-  <input type="password" [(ngModel)]="password" placeholder="Password">
-  <button type="submit" (click)="click()">Enter</button>
-  <span *ngIf="error">ERROR: {{error}}</span>
+<div class="form-inline">
+  <input
+    type="text"
+    class="form-control"
+    [(ngModel)]="login"
+    placeholder="Login"
+  >
+  <input
+    type="password"
+    class="form-control"
+    [(ngModel)]="password"
+    placeholder="Password"
+  >
+  <button
+    type="submit"
+    (click)="click()"
+    class="btn btn-primary"
+  >Sign In</button>
+  <span
+    *ngIf="error"
+    class="alert alert-danger"
+    role="alert"
+  >ERROR: {{error}}</span>
 </div>
