--- a/angular-starter/src/app/toolbar/search/search.component.html
+++ b/angular-starter/src/app/toolbar/search/search.component.html
@@ -4,5 +4,5 @@
     placeholder="Search..."
     (keyup.enter)="find()"
   >
-  <button (click)="find()">Find</button>
+  <button class="btn btn-info" (click)="find()">Find</button>
 </div>
