--- a/angular-starter/src/app/userinfo/userinfo.component.html
+++ b/angular-starter/src/app/userinfo/userinfo.component.html
@@ -1,5 +1,5 @@
 <div>
   <p>Login: {{user.login}}</p>
   <p>Name: {{user.name.first}} {{user.name.last}}</p>
-  <button (click) = "click()">logoff</button>
+  <button class="btn btn-danger" (click)="click()">logoff</button>
 </div>
