--- a/angular-starter/src/app/course-page/course-page.component.html
+++ b/angular-starter/src/app/course-page/course-page.component.html
@@ -36,8 +36,8 @@
   </div>
 
   <label>
-    <button type="submit" (click)="save()">Save</button>
-    <button type="submit" (click)="cancel()">Cancel</button>
+    <button type="submit" class="btn btn-success" (click)="save()">Save</button>
+    <button type="submit" class="btn btn-secondary" (click)="cancel()">Cancel</button>
   </label>
 </form>
 
