--- a/angular-starter/src/app/course/course.component.css
+++ b/angular-starter/src/app/course/course.component.css
@@ -1,9 +1,4 @@
-p {
-  color: #369;
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 250%;
-  margin: 5px 0px;
-}
+
 .tags {
   padding: 5px;
   display: flex;
@@ -17,9 +12,9 @@ p {
 .controls {
   display: flex;
   justify-content: space-around;
+  align-items: center;
 }
 
-/* angular...why you do host 0x0 ?  */
 :host>div {
   border-radius: 15px;
   border: 7px solid black;
