--- a/angular-starter/src/app/course/course.component.html
+++ b/angular-starter/src/app/course/course.component.html
@@ -17,11 +17,14 @@
   <p>{{courseItem.name | uppercase}} | ID: {{courseItem.id}} | Duration: {{courseItem.duration | myDurations }} <i *ngIf="courseItem.topRated" class="fas fa-star"></i></p>
   <p>Date: {{courseItem.date | date:"dd/MM/yyyy"}}</p>
   <div class="controls">
-    <!--i want: checkbox ===  courseItem.isAccept and click => recalc counter -->
-    <label><input type = "checkbox" [(ngModel)] = "courseItem.isAccept"
-    />Accepted</label>
-    <button (click) = "edit(courseItem.id)">edit</button>
-    <button (click) = "del()">delete</button>
+    <div class="form-check">
+      <input class="form-check-input" type="checkbox" [(ngModel)] = "courseItem.isAccept">
+      <label class="form-check-label" for="defaultCheck1">
+        Accepted
+      </label>
+    </div>
+    <button class="btn btn-info" (click)="edit(courseItem.id)">edit</button>
+    <button class="btn btn-danger" (click)="del()">delete</button>
   </div>
   <p class="tags" *ngIf="courseItem.tags.length > 0">
     <span
