--- a/angular-starter/src/app/modalWindow/modalWindow.component.html
+++ b/angular-starter/src/app/modalWindow/modalWindow.component.html
@@ -1,14 +1,26 @@
-<div *ngIf="visible">
-  <div class="message">
-    <h2>{{message}}</h2>
-    <div class="buttons">
-      <button *ngFor = "let item of answerArr"
-      (click) = "click(item)"
-      >{{item.title}}</button>
+
+<div *ngIf="visible" class="modal" tabindex="-1" role="dialog">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">Make your choose</h5>
+          <button
+            (click)="click(default)"
+            type="button" class="close" data-dismiss="modal" aria-label="Close"
+          >
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <p>{{message}}</p>
+        </div>
+        <div class="modal-footer">
+          <button
+            *ngFor="let item of answerArr"
+            class="btn btn-light"
+            (click)="click(item)"
+          >{{item.title}}</button>
+        </div>
+      </div>
     </div>
-    <i class="close far fa-times-circle"
-    (click) = "click(default)"
-    title="{{default.title}}"
-    ></i>
   </div>
-</div>
