--- a/angular-starter/src/app/loaderBlock/loaderBlock.component.css
+++ b/angular-starter/src/app/loaderBlock/loaderBlock.component.css
@@ -1,21 +1,3 @@
-:host>div {
-  position: fixed;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  background-color: rgba(0, 0, 0, 0.7);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-:host>div .message {
-  padding: 15px;
-  border-radius: 15px;
-  position: relative;
-  background-color: rgba(255, 255, 255, 0.7);
-}
 
 .loader,
 .loader:after {
@@ -31,7 +13,7 @@
   border-top: 1.1em solid rgba(255, 255, 255, 0.2);
   border-right: 1.1em solid rgba(255, 255, 255, 0.2);
   border-bottom: 1.1em solid rgba(255, 255, 255, 0.2);
-  border-left: 1.1em solid #ffffff;
+  border-left: 1.1em solid rgba(255, 255, 255, 1);
   -webkit-transform: translateZ(0);
   -ms-transform: translateZ(0);
   transform: translateZ(0);
