--- a/angular-starter/src/app/modalWindow/modalWindow.component.css
+++ b/angular-starter/src/app/modalWindow/modalWindow.component.css
@@ -10,31 +10,9 @@
   align-items: center;
 }
 
-:host>div .message {
-  padding: 15px 35px;
-  border-radius: 15px;
-  position: relative;
-  background-color: rgba(255, 255, 255, 0.7);
-}
-
-:host>div .message>.btn-group{
+.btn-group{
   width: 100%;
   display: flex;
   justify-content: space-around;
   align-items: center;
-}
-
-:host>div .message .close{
-  position: absolute;
-  top: 10px;
-  right: 10px;
-  font-size: 1.3em;
-}
-:host>div .message .close:hover{
-  background-color: rgb(250, 78, 10);
-  border-radius: 50%;
-  -webkit-box-shadow: 0px 0px 5px 3px rgba(250, 78, 10, 1);
-  -moz-box-shadow: 0px 0px 5px 3px rgba(250, 78, 10, 1);
-  box-shadow: 0px 0px 5px 3px rgba(250, 78, 10, 1);
-
 }
