--- a/angular-starter/src/app/toolbar/toolbar.component.html
+++ b/angular-starter/src/app/toolbar/toolbar.component.html
@@ -1,4 +1,4 @@
-<div>
+<div class="container-fluid">
   <search></search>
   <button class="btn btn-primary" (click)="createNewCourse()">Add course</button>
 </div>
