--- a/angular-starter/src/app/modalWindow/modalWindow.component.html
+++ b/angular-starter/src/app/modalWindow/modalWindow.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="visible" class="modal" role="dialog">
+<div *ngIf="visible" class="modal" tabindex="-1" role="dialog">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
